SuppressWarnings to test class